Fix refresh to centre on current location. Fix info button on mobile devices.

--- a/css/raindar.less
+++ b/css/raindar.less
@@ -181,22 +181,17 @@ html, body {
     z-index: 999;
   }
 }
-//  #button-refresh-data {
-//    background-image: url('@{image-refresh}');
-//    position: absolute;
-//    height: 23px;
-//    width: 23px;
-//    z-index: 999;
-//    right: 10px;
-//    bottom: 52px;
-//  }
 #button-about {
   position: absolute;
   right: 10px;
-  top: 10px;
+//  top: 10px;
   background-image: url('@{image-about}');
   height: 22px;
   width: 22px;
+  z-index: 999;
+  right: 10px;
+  bottom: 52px;
+
 }
 
 #button-zoom {
@@ -338,6 +333,14 @@ html, body {
 
   #info-temperature-wrapper {
     width: 14%;
+  }
+
+  #button-about {
+    //    top: 10px;
+    bottom: 56px;
+    z-index: 999;
+    left: 35%;
+    z-index: 999;
   }
 }
 
